fixed loading screen distortion, fixed favicon path issue

--- a/assets/sass/_loading.scss
+++ b/assets/sass/_loading.scss
@@ -17,7 +17,7 @@
 	z-index: 999;
 }
 
-.js #loading-spinner { 
+.js #loading-spinner-container { 
 	display: block; 
 	position: absolute; 
 	margin: 0 auto; 
@@ -27,6 +27,14 @@
 	right: 0; 
   width: 100px;
   height: 100px;
+}
+
+.js #loading-spinner { 
+	display: block; 
+	position: absolute; 
+	margin: 0 auto; 
+  width: 100%;
+  height: 100%;
 }
 
 .no-cssanimations #loading-fallback { display: block; }
@@ -55,12 +63,5 @@
   } 100% {
     transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
     -webkit-transform: perspective(120px) rotateX(-180deg) rotateY(-179.9deg);
-  }
-}
-
-@media (max-width: 577px) {
-		.js #loading-spinner {
-    width: 40px;
-    height: 40px;
   }
 }
